tests/reference/asr-derived_type_01-d480dc4.stderr
semantic error: Interface for deferred binding not found
 --> tests/errors/derived_type_01.f90:7:9
  |
7 |         procedure(testing_interface), deferred  :: testing
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
